--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -7,6 +7,11 @@
   <!-- Mobile Specific Metas
     ================================================== -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" /> 
+    
+  <!-- Fonts from typekit
+    ================================================== -->
+  <script type="text/javascript" src="http://use.typekit.com/jxu6gip.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   
   <!-- CSS
     ================================================== -->
