--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -43,7 +43,7 @@
       <!-- Branding -->
       <hgroup class="six columns alpha">
         <a href="{{ root_url }}/">
-          <h1 id="logo"><img src="{{ root_url }}/assets/images/theme/neo4j-logo/logo.png" alt="logo" />{{ site.title }}</h1>
+          <h1 id="logo"><img src="{{ root_url }}/assets/images/theme/neo4j-logo/logo.svg" alt="logo" />{{ site.title }}</h1>
         </a>
 
 <!--         {% if site.subtitle %}
