--- a/source/assets/stylesheets/typography-sans.css
+++ b/source/assets/stylesheets/typography-sans.css
@@ -27,6 +27,10 @@ h5 {
 	line-height: 28px;
 	margin-top: 10px;
 } 
+
+h1#logo {
+  font-family: "angie-sans", "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+}
 	
 h2.title{ 
     background: url("../images/theme/backgrounds/pattern_diagonal_medium.png") repeat scroll 0 0 transparent;
