--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -23,7 +23,14 @@
   
   <!-- Favicons
   ================================================== -->
-  <link rel="shortcut icon" href="{{ root_url }}/assets/images/favicon.ico" />
+  <link rel="shortcut icon" href="{{ root_url }}/assets/images/favicon.png" />
   <link rel="apple-touch-icon" href="{{ root_url }}/assets/images/apple-touch-icon.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="{{ root_url }}/assets/images/apple-touch-icon-72x72.png" />
   <link rel="apple-touch-icon" sizes="114x114" href="{{ root_url }}/assets/images/apple-touch-icon-114x114.png" />
+<!-- Favicons
+================================================== -->
+<link rel="shortcut icon" href="images/favicon.png">
+<link rel="apple-touch-icon" href="images/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="144x144" href="images/apple-touch-icon-144x144.png">
