initial hack up of install script, for mac

--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -3,13 +3,13 @@
 <div class="main-header clearfix super-container full-width ">
   <div class="container"> <!-- 960grid -->
     <hgroup class="six columns alpha">
-      <a class="browse" href="#"><h1 id="logo"><img src="{{ root_url }}/assets/images/theme/neo4j-logo/header-logo.png" alt="logo"></h1></a>
+      <a class="browse" href="#"><h1 id="logo"><img src="{{ root_url }}/assets/images/theme/neo4j-logo/header-logo.png" alt="logo"/></h1></a>
     </hgroup>
     
     <nav class="ten columns omega">
       <div class="header-advert">
         <p><strong>Neo4j {{ site.latest_version }}</strong></p>
-        <a href="http://blog.neo4j.org/2012/07/neo4j-18m06-rolling-upgrades.html" id="readme" class="button yellow">Read Me</a>
+        <a href="{{ site.latest_readme }}" id="readme" class="button yellow">Read Me</a>
         <a href="{{ root_url }}/download" id="download" class="button green">Download</a>
       </div>
     </nav>  
